--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
     "name": "vscode-ergoscript-language-support",
     "displayName": "ErgoScript Language Support",
     "description": "Language support features for ErgoScript in VS Code",
-    "version": "0.2.0",
+    "version": "0.3.0",
     "publisher": "guapswap",
     "author": {
         "name": "GuapSwap"
     },
-    "license": "SEE LICENSE IN THE LICENSE",
+    "license": "SEE LICENSE IN THE LICENSE.txt",
     "repository": {
         "type": "git",
         "url": "https://github.com/GuapSwap/vscode-ergoscript-language-support.git"
