--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "author": {
         "name": "GuapSwap"
     },
-    "license": "SEE LICENSE IN THE LICENSE.txt",
+    "license": "SEE LICENSE IN LICENSE",
     "repository": {
         "type": "git",
         "url": "https://github.com/GuapSwap/vscode-ergoscript-language-support.git"
